# bevy_gltf_animation_test_240505

./: Cargo.toml  README.md
assets/: registry.json  test_scale.blend  test_scale.gltf
src/: main.rs
